# RoLIMOA

./: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  compose.prod.yml  compose.yml  package-lock.json  package.json
.github/workflows/: claude-code-review.yml
client/: .gitignore  index.html  package-lock.json  package.json
client/public/: index.html
client/src/: AdminPage.tsx  App.tsx  AppMuiThemeProvider.tsx  Dashboard.tsx  DeviceListContainer.tsx  HomePage.tsx  LoadingOverlay.tsx  LocalTimerClock.tsx  ScoreBlockV3.tsx  (+30 more)
docker/: Dockerfile  Dockerfile.release  build.sh  exec.sh  run.sh  run_dev.sh
docs/: customization.md  getting-started.md
extension-py/: README.md  main.py  new_rolimoa_extension.py  pyproject.toml  requirements.txt  rolimoa_extension.py
extension-py/example/google_spreadsheet/: README.md  env.py.example  main.py
extension-py/src/examples/basic/: main.py
extension-py/src/examples/google_spreadsheet/: .gitignore  README.md  main.py
extension-py/src/rolimoa_extension/: __init__.py  rolimoa_extension.py
server/: package-lock.json  package.json
src/: AdminPage.tsx  App.css  App.tsx  Dashboard.tsx  HomePage.tsx  LoadingOverlay.tsx  ScoreBlockComponent.tsx  ScoreBlockContainer.tsx  ScoreBoard.tsx  ScoreBoardComponent.tsx  ScoreBoardContainer.tsx  ScoreDisplayBlock.tsx  ScoreInput.tsx  ScoreInputPage.tsx  TaskObject.tsx  TaskObjectComponent.tsx  TaskObjectContainer.tsx  TimerDisplayComponent.tsx  TimerDisplayContainer.tsx  TimerMasterComponent.tsx  TimerMasterContainer.tsx  actions.ts  config.json  index.tsx  reducer.ts
(+103 files in other folders)
