[project]
name = "rolimoa-extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kishimotonico", email = "kishimotonico@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx-ws>=0.7.1",
]

[project.optional-dependencies]
google_spreadsheet = [
    "google>=3.0.0",
    "gspread>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
